# meshterm

./: .gitignore  API-MAPPING.md  ARCHITECTURE.md  Makefile  NOTICE  README.md  fabfile.py  pyproject.toml
docs/: VSCODE-TMUX-INTEGRATION.md  VSCODE.md
docs/iterm2-docs/01-getting-started/: basic-configuration.md  first-launch.md  installation.md
docs/iterm2-docs/02-features-reference/: ai-chat.md  all-features.md  hotkey-window.md  inline-images.md  instant-replay.md  profiles.md  session-logging.md  shell-integration.md  smart-selection.md  split-panes.md  tmux-integration.md  triggers.md  window-projects.md
docs/iterm2-docs/03-scripting/: applescript-legacy.md  applescript-reference.md  jxa-alternative.md  migration-guide.md  python-api-guide.md  python-api-reference.md  workflow-overview.md
docs/iterm2-docs/04-applescript-fundamentals/: common-patterns.md  error-handling.md  gotchas-reference.md  gui-scripting.md  handlers.md  language-basics.md  variables-properties.md
docs/iterm2-docs/05-integration-patterns/: bash-integration.md  multi-window-launcher.md  python-integration.md  terminal-automation.md
docs/iterm2-docs/06-optimization-cookbook/: applescript-fixes.md  current-issues.md  helper-library.md  performance-tips.md  python-api-solutions.md
docs/iterm2-docs/07-alternatives-comparison/: automation-approaches.md  migration-paths.md  terminal-emulators.md  when-to-use-what.md
docs/iterm2-docs/08-reference/: error-codes.md  escape-sequences.md  keycodes.md  official-links.md  quick-reference.md
docs/iterm2-docs/knowledge-graphs/: iterm2-scripting.json  knowledge-graph.dot
docs/reference/: PART-I-II-EXTENDED.md  PART-III-IV-V-EXTENDED.md  README.md  REVIEW-REPORT.md
docs/reference/examples/: minimal-terminal.py  pty-fork-example.c
docs/reference/examples/rust-terminal-skeleton/: Cargo.toml
docs/reference/examples/rust-terminal-skeleton/src/: main.rs
scripts/: vscode_profile_manager.py
src/meshterm/: __init__.py  _settings_base.py  app.py  bash_history.py  cli.py  connection.py  idle.py  idle_monitor.py  jsonl_history.py  libtmux_session.py  monitor.py  remote.py  server.py  session.py  tab.py  transport.py  uuid_tracker.py  vscode_profiles.py  window.py
src/meshterm/templates/: local.toml.template
tests/: e2e_cli_test.sh  e2e_idle_test.sh  e2e_phase5.sh  test_idle.py  test_live_tmux.py  test_stress.py
tests/integration/: test_libtmux_backend.py  test_remote_ssh.py
tests/unit/: test_bash_history.py  test_connection.py  test_jsonl_history.py  test_monitor.py  test_remote.py  test_remote_fuzz.py  test_server.py  test_session.py  test_vscode_profiles.py
